[project]
name = "asyncwhois"
authors = [
  { name="Joe Obarzanek", email="pogzyb@umich.edu" },
]
description = "Python WHOIS and RDAP utility for querying and parsing information about Domains, IPv4s, IPv6s, and AS numbers."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Security",
    "Framework :: AsyncIO",
]
dynamic = ["version"]
license = {text = "MIT License"}
dependencies = [
    "python-socks[asyncio]>=2.0.2",
    "tldextract>=3.2.0",
    "whodap>=0.1.10"
]

[project.urls]
Homepage = "https://github.com/pogzyb/asyncwhois"
Issues = "https://github.com/pogzyb/asyncwhois/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asyncwhois"]

[tool.hatch.version]
path = "asyncwhois/__init__.py"