[metadata]
license_files = LICENSE
name = asyncwhois
version = attrs: asyncwhois.__version__
author = Joseph Obarzanek
author_email = pogzyb@umich.edu
description = Python WHOIS and RDAP utility for querying and parsing information about Domains, IPv4s, IPv6s, and AS Numbers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pogzyb/asyncwhois
project_urls =
    Bug Tracker = https://github.com/pogzyb/asyncwhois/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Security
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

[options]
package_dir = asyncwhois
packages = find:
python_requires = >=3.9

[options.packages.find]
where = asyncwhois